task2/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: dockerhub-credentials # name of dockerhub credential secret
      containers:
        - name: frontend
          image: "docker-private-org/frontend:tag"
          resources: # request is not configured since nginx pod can run with very min resources
            limits:
              memory: "128Mi"
              cpu: "500m" # above this limits can indicate some problem or very high traffic
          ports:
            - containerPort: 80
