task2/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: frontend
spec:
  rules:
  - host: example.com # replace with frontend domain
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port: 
              number: 80
  tls:
  - hosts:
    - example.com # replace with frontend domain
    secretName: frontend # certificate secret name
